--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-== v1.0.2 == (14/05/205)
+== v1.0.3 == (19/05/2015)
+- Add new option for select field. If field name ends with "_id", the data is
+charge from model. :-D
+
+== v1.0.2 == (14/05/2015)
 - Add namespace for the packages on configuration.
 - Minor change on layout.
 
